Bug 103658: if a filter rule contains an odd number of quotes, Mozilla is unable to parse it, patch by Guy Alfandary <galfandary@yahoo.ca>, r=mscott, sr=bienvenu